<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
    android:background="@color/windowBackground"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
            <ImageView
                android:layout_marginLeft="40dp"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:src="@drawable/heart_chart"
                android:layout_weight="2"/>
            <ImageView
                android:id="@+id/btnback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="vertical">
        <LinearLayout
            android:background="#D9EDF0"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:text="@string/title1"
                android:textColor="#DF3C0A"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:paddingLeft="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0F0909"
                android:text="@string/content1"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <LinearLayout
            android:background="#D9EDF0"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:text="@string/title2"
                android:textColor="#DF3C03" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:paddingLeft="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content2"
                android:textColor="#0F0909" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <LinearLayout
            android:background="#D9EDF0"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:textColor="#DF3C03"
                android:text="@string/title3"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:paddingLeft="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0F0909"
                android:text="@string/content3"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <LinearLayout
            android:background="#D9EDF0"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                android:textColor="#DF3C03"
                android:text="@string/title4"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:paddingLeft="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#0F0909"
                android:text="@string/content4"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</ScrollView>